<resources>
    <string name="app_name">Happiest Places</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="scan_msg">Scan QR code on your Table</string>
    <string name="network_err">Please check your network connection</string>
    <string name="empty_text">No dishes found</string>
    <string name="add_button">ADD</string>
    <string name="view_order">View Order</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="cancel_button">CANCEL</string>
    <string name="order_title">Your Order</string>
    <string name="grand_total_label">Grand Total</string>
    <string name="dummy_value">Rs 2500</string>
    <string name="table_num">"Table num : "</string>
    <string name="alert_dialog_cancel_title">CANCEL?</string>
    <string name="alert_cancel_confirm_msg">Are you sure yor want to cancel this order?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="alert_dialog_order_title">Place Order</string>
    <string name="alert_order_confirm_msg">Place this order with the Restaurant</string>
    <string name="order_success_msg">Your order has been placed.</string>
    <string name="alert_dialog_add_title">No Items</string>
    <string name="alert_no_items_msg">Please add items in your order</string>
    <string name="ok">OK</string>
    <string name="success_msg">Your Order will be delivered to your table soon.</string>
    <string name="review_button">Rate your Experience</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_review">Write Review..</string>
    <string name="how_label">How was the food?</string>
    <string name="review_hint">Write a review</string>
    <string name="post">Post Review</string>
    <string name="dummy_date">Today, 10:45</string>
    <string name="rate_label">Rate the Restaurant</string>
    <string name="main_notification_channel_name">review_reminder</string>
    <string name="review_reminder_notification_body">Rate your last order</string>
    <string name="notification_content_title">Rate your Order</string>
    <string name="redeem_default_label">Sign In now to earn 100 reward points</string>
    <string name="redeem_welcome_label">Unlock free dishes and special discounts.\n100 Rewards points are waiting for you.</string>
    <string name="no_reviews">No Reviews yet</string>
    <string name="default_rating">0.0</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="wrongQR">You are scanning the wrong QR code</string>
    <string name="wrongRest">"This Restaurant is not available "</string>
    <string name="food_img">Food Image</string>
    <string name="increment">Add item to your order</string>
    <string name="share">Share</string>
    <string name="sign_in">"You are signed in as "</string>
    <string name="order_fail">Sorry, Your order has not been placed.</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="profile">Profile</string>
    <string name="notification">Notifications</string>
    <string name="sign_in_settings">Google Sign In</string>
    <string name="signInSummary">Sign In to earn free points</string>
    <string name="inviteEarnPreference">Invite and Earn</string>
    <string name="inviteSummary">Invite your friends to earn Reward Points</string>
    <string name="help">Help</string>
    <string name="ordersSetting">Orders</string>
    <string name="settingsFragment">Settings</string>
    <string name="profileFragment">Profile</string>
    <string name="logout">Log Out</string>
    <string name="total_points">Total reward points</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="sign_in_err">There was a problem signing you in.Please try again.</string>
    <string name="order_success_for_this_order">"points for this order"</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="code">Code</string>
    <string name="country">Country</string>
    <string name="textEmptyError">Please enter the value</string>
    <string name="data_updated">Your Profile is updated</string>
    <string name="notification_title_delivered">-Order delivered</string>
    <string name="delivery_text"> Your order was delivered.</string>
    <string name="notification_title_cancelled">-Order cancelled</string>
    <string name="cancelled_text">Your order is cancelled.</string>
    <string name="empty_order">No orders</string>
    <string name="more">+More</string>
    <string name="table">Table:</string>
    <string name="ordersFragment_">Orders</string>
    <string name="notification_title_preparing">"-Preparing Order"</string>
    <string name="preparing_text">Your order is been prepared.</string>
    <string name="notification_title_ready">-Order Ready</string>
    <string name="ready_text">Your order is ready and will be delivered soon.</string>
    <string name="reward_pts">"Reward Points: "</string>
    <string name="remaining">Remaining points: +</string>
    <string name="title3">EARN REWARDS</string>
    <string name="slide3_detail1">You earn reward points with each order.</string>
    <string name="slide3_detail2">Claim these reward points to get discounts on your order.</string>
</resources>