<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/primaryColor">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slider_img_size"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:src="@drawable/ic_slide1"
        app:layout_constraintBottom_toTopOf="@id/titleText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xx_medium_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/title3"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/detailText1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xxxlarge"
        android:layout_marginBottom="@dimen/margin_medium"
        android:drawableStart="@drawable/ic_action_points"
        android:drawablePadding="2dp"
        android:text="@string/slide3_detail1"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toTopOf="@id/detailText2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xxxlarge"
        android:drawableLeft="@drawable/ic_action_points"
        android:drawablePadding="2dp"
        android:text="@string/slide3_detail2"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailText1" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xlarge"
        android:background="@color/brown"
        android:text=" Save Money "
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/margin_xx_medium_large"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>