<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orderLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context=".review.AddReviewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/restaurant_container"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/white"
        android:elevation="@dimen/card_view_elevation"
        android:padding="@dimen/padding"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/card_view_elevation">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ellipsize="end"
                android:maxLength="20"
                android:maxLines="1"
                android:text="@string/how_label"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="HardRock Cafe" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="15dp"
            android:clickable="true"
            android:layout_centerVertical="true"
            tools:text="Rs 500"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_name"
            android:layout_alignLeft="@id/restaurant_name"
            android:clickable="true"
            android:text="@string/dummy_date"
            tools:text="Today, 10:45"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/how_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/how_label"
        app:layout_constraintTop_toBottomOf="@id/restaurant_container"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="How was the food?" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_label"/>


    <EditText
        android:id="@+id/review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="3"
        android:maxLines="3"
        android:background="@drawable/edittext_bkg"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/margin_small"
        style="@style/CardView"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        android:hint="@string/review_hint"
        android:inputType="textMultiLine" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/restaurant_rate_container"
        android:visibility="visible"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:elevation="@dimen/card_view_elevation"
        android:padding="@dimen/padding"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/card_view_elevation"
        app:layout_constraintTop_toBottomOf="@id/review_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rating_label_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/font_medium"
                android:text="@string/rate_label"
                tools:text="Rate the Restaurant" />

            <RatingBar
                android:id="@+id/ratingBarRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_label_restaurant"
                android:layout_centerHorizontal="true"
                android:scaleX="0.6"
                android:scaleY="0.6"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_rate_container"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>